kubernetes/apps/bootstrap00/netbootxyz/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: bootstrap
  labels:
    app: netbootxyz
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: assets
      port: 80
      targetPort: 80
    - name: admin
      port: 3000
      targetPort: 3000
  clusterIP: None
  selector:
    app: netbootxyz
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-mgmt
  namespace: bootstrap
  labels:
    app: netbootxyz
    network: mgmt
  annotations:
    lbipam.cilium.io/ips: "${bootstrapMgmtIpv4},${bootstrapMgmtIpv6}"
    lbipam.cilium.io/sharing-key: mgmt-bootstrap
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: tftp
      port: 69
      protocol: UDP
      targetPort: 69
    - name: assets
      port: 80
      targetPort: 80
    - name: admin
      port: 3000
      targetPort: 3000
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  selector:
    app: netbootxyz
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: netbootxyz-tftp-service
#   namespace: bootstrap
#   labels:
#     app: netbootxyz
#     network: service
#   annotations:
#     lbipam.cilium.io/ips: "${bootstrapServiceIpv4},${bootstrapServiceIpv6}"
#     lbipam.cilium.io/sharing-key: service-bootstrap
# spec:
#   ipFamilyPolicy: PreferDualStack
#   ports:
#     - name: tftp
#       port: 69
#       protocol: UDP
#       targetPort: 69
#   type: LoadBalancer
#   selector:
#     app: netbootxyz
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: netbootxyz-tftp-k8s00
#   namespace: bootstrap
#   labels:
#     app: netbootxyz
#     network: k8s00
#   annotations:
#     lbipam.cilium.io/ips: "${bootstrapK8s00Ipv4},${bootstrapK8s00Ipv6}"
#     lbipam.cilium.io/sharing-key: k8s00-bootstrap
# spec:
#   ipFamilyPolicy: PreferDualStack
#   ports:
#     - name: tftp
#       port: 69
#       protocol: UDP
#       targetPort: 69
#   type: LoadBalancer
#   selector:
#     app: netbootxyz
